@@ -19,6 +19,9 @@ parameters:
   the counting process of processed nodes 
 - added parameter <misc/resetstat> which state if the statistics should be reseted if the transformed problem is freed 
   (in case of a benders decomposition this parameter should be set to FALSE) default value is TRUE
+- added parameter <misc/improvingsols> which state if only solution which have a better (or equal) primal bound 
+  as the best know one are checked  is TRUE; this is of interest if the check of a solution is expensive; 
+  default value is FALSE
 
 interface:
 - new method SCIPstartSolvingTime() and SCIPstopSolvingTime() which can be used to start or stop the solving time clock
